updated docs and added delete event endpooint:
